# gaia-stehekin-postfire-debrisflows

./: .gitignore  CONTRIBUTING.md  LICENSE  QUICK_REFERENCE.md  README.md  config.yaml  environment.yml  pyproject.toml  requirements.txt  setup.py
notebooks/: UW_DREAM_mudslide_detection.ipynb  example_analysis.ipynb  monitoring_UW_DREAM.ipynb
src/: __init__.py  data.py  detect.py  models.py  utils.py
tests/: __init__.py  test_data.py  test_models.py
